--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
 GRAPHQL_HOST="http://localhost:1337/graphql"
-NEXT_PUBLIC_IMAGE_HOST="http://localhost:1337"
+NEXT_PUBLIC_IMAGE_HOST="http://192.168.15.13:1337"
