--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,4 @@
 NEXT_PUBLIC_GA_TRACKING=UA-58087941-2
+
+GRAPHQL_HOST="https://reactavancado-api-13.herokuapp.com/graphql"
+NEXT_PUBLIC_IMAGE_HOST=""
