--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,24 +3,19 @@
   "short_name": "App",
   "icons": [
     {
-      "src": "/static/icons/android-chrome-192x192.png",
+      "src": "/public/img/icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/static/icons/android-chrome-384x384.png",
-      "sizes": "384x384",
-      "type": "image/png"
-    },
-    {
-      "src": "/static/icons/icon-512x512.png",
+      "src": "/public/img/icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
   ],
-  "theme_color": "#FFFFFF",
-  "background_color": "#FFFFFF",
+  "theme_color": "#06092B",
+  "background_color": "#06092B",
   "start_url": "/",
-  "display": "standalone",
+  "display": "fullscreen",
   "orientation": "portrait"
 }
